[gd_scene load_steps=7 format=1]

[ext_resource path="res://nodes/main_menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/spr_title/desert_thirst_menu.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/spr_title/title.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_title/title_inst.png" type="Texture" id=4]
[ext_resource path="res://sprites/spr_title/esc.png" type="Texture" id=5]
[ext_resource path="res://nodes/sfx.tscn" type="PackedScene" id=6]

[node name="main_menu" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
alignment = 0
script/script = ExtResource( 1 )

[node name="center_container" type="CenterContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 20.0
use_top_left = false

[node name="timer" type="Timer" parent="center_container"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="desert_thirst_menu" type="Sprite" parent="center_container"]

transform/pos = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="title" type="Sprite" parent="center_container"]

visibility/opacity = 0.0
transform/pos = Vector2( 195.896, 411.361 )
transform/scale = Vector2( 0.324433, 0.498607 )
texture = ExtResource( 3 )

[node name="instructions" type="Sprite" parent="center_container"]

visibility/opacity = 0.0
transform/pos = Vector2( 525.796, 451.845 )
transform/scale = Vector2( 0.248361, 0.378398 )
texture = ExtResource( 4 )

[node name="instructions_background" type="Sprite" parent="center_container"]

[node name="esc" type="Sprite" parent="center_container"]

transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
offset = Vector2( 3250, 1870 )

[node name="fade_in_logo" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="fade_in_inst" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = true
playback/speed = 1.0

[node name="fade_out_logo" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="fade_in_esc" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="sfx" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="center_container/timer" to="." method="_on_timer_timeout"]

[connection signal="tween_complete" from="fade_in_logo" to="." method="_on_fade_in_logo_tween_complete"]


